# dunder-mifflin-revops

./: .gitattributes  .gitignore  LICENSE  README.fr.md  README.md  README.pt-BR.md  README.zh-CN.md  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: deals_meta.csv  deals_snapshot.csv  owners.csv  targets.csv
notebooks/: revops_analysis.ipynb
